# primetools

./: CMakeLists.txt
include/: calculate_primes.hpp  is_prime.hpp  utilties.hpp
src/app/: main.cpp
src/lib/: calculate_primes.cpp  is_prime.cpp  utilties.cpp
test/: main.cpp
